# pysx

./: README.md  pyproject.toml
docs/: index.md
samples/: tkinter_.py
statex/: __init__.py  statex.py
tests/: helpers.py  test_main.py
